fix(plugins/plugin-bash-like): pty output should be pre-wrap, i think

--- a/plugins/plugin-bash-like/web/scss/xterm.scss
+++ b/plugins/plugin-bash-like/web/scss/xterm.scss
@@ -11,7 +11,7 @@ body[kui-theme-style] .kui--tab-content {
   }
 
   .xterm-terminated .xterm-rows > div {
-    white-space: pre;
+    white-space: pre-wrap;
   }
 
   .repl-result-like > div.xterm-container {
